chore: #340 Setup benchmark for McpController
Signed-off-by: Laurent Broudoux <laurent.broudoux@gmail.com>